# MeteoStation

./: .gitignore
backend/: .gitignore  CMakeLists.txt  backend.cpp
backend/driver/inc/: drv_logger.h
backend/driver/src/: drv_logger.c
backend/drivers/inc/: drv_common_errors.h  drv_common_status.h  drv_logger.h
backend/drivers/src/: drv_common_errors.c  drv_common_status.c  drv_logger.c
backend/include/: common_status.hpp
backend/include/database/: database_api.hpp  database_manager.hpp
backend/include/logger/: logger_api.hpp
backend/include/mqtt/: mqtt_client_api.hpp
backend/include/qp/: README  backend_events.hpp
backend/logger/: CMakeLists.txt  logger.cpp
backend/sources/: CMakeLists.txt  logger.cpp
backend/sources/database/: CMakeLists.txt  database.cpp  database_manager.cpp
backend/sources/mqtt/: CMakeLists.txt  mqtt_client.cpp
backend/sources/qp/: CMakeLists.txt  backend_events.cpp
backend/statemachines/: .database  .mqtt_sm  database.qm  mqtt_sm.qm
backend/stm32_backend/: DRVBuild.make  Makefile  stm32_backend.ioc
backend/stm32_backend/Src/: main.c  stm32f4xx_hal_msp.c
hardware/backend/: .gitignore  Makefile
hardware/backend/backend/: backend.ioc
hardware/backend/backend/Src/: main.c
hardware/bsp/app/inc/: dbg_console.h
hardware/bsp/cubemx_gen/: cubemx_gen.ioc
hardware/bsp/cubemx_gen/Src/: main.c
hardware/bsp/drivers/src/dbg_console/: console.c  dbg_console.c  dbg_console_cli.c
hardware/esp8266mod/: esp8266mod.ino
hardware/esp8266mod/lib/: cbme200sensor_api.hpp  csensor_api.hpp  isensor.hpp  mqttbroker_api.hpp
mobile_app/: settings.gradle
mobile_app/app/src/androidTest/java/meteostation/app/: ExampleInstrumentedTest.kt
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/meteostation/app/: MainActivity.kt
mobile_app/app/src/main/java/meteostation/app/mqttclient/: MQTTClient.kt  MqttListner.kt
mobile_app/app/src/main/java/meteostation/app/sensormanager/: SensorManager.kt  eSensorType.kt  sensor.kt
mobile_app/app/src/main/java/meteostation/app/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
mobile_app/app/src/main/java/meteostation/app/ui/home/: HomeFragment.kt  HomeViewModel.kt
mobile_app/app/src/main/res/layout/: fragment_home.xml
mobile_app/app/src/main/res/menu/: activity_main_drawer.xml
mobile_app/app/src/main/res/navigation/: mobile_navigation.xml
mobile_app/app/src/main/res/values/: strings.xml
mobile_app/app/src/test/java/meteostation/app/: ExampleUnitTest.kt
mobile_app/gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
