file(GLOB SOURCES *.cpp)
add_library(qp ${SOURCES})

set(QP_DIR $ENV{QPCPP})
set(QP_PORT ${QP_DIR}/ports/posix-qv)

file(GLOB_RECURSE QP_HEADERS ${QP_DIR}/*.hpp)
set(PREV " ")
foreach(header ${QP_HEADERS})
    if(NOT ${header} MATCHES "/exampl")
        if(${header} MATCHES "/include" OR ${header} MATCHES ${QP_PORT} OR ${header} MATCHES "/src")
            string(REGEX MATCHALL "/.+/" header ${header})
            if(NOT ${PREV} MATCHES ${header})
                list(APPEND QP_INCLUDES ${header})
                message(${header})
                set(PREV ${header})
            endif()
        endif()
    endif()
endforeach()
include_directories(${QP_INCLUDES})